--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="container-02">
-            <p>Site criado por Arthur Batista</p>
+            <p>Site criado por Arthur de Andrade Batista</p>
         </div>
     </footer>
 
