--- a/index.html
+++ b/index.html
@@ -14,15 +14,41 @@
     <!--  --------------------- Header --------------------- -->
    
     <div id="header">
+
         <div id="logo">
             <a href="index.html"><img src="Imagens/Logo site trabalho.png"></a>
         </div>
+
         <nav class="navbar">
-            <ul>               
-                <a href="Index.html"><li>MENU</li></a>
-                <a href="#"><li>RECEITAS</li></a>
-                <a href="#"><li>VIDEOS</li></a>
-                <a href="#"><li>AJUDA</li></a>
+            <ul id="menu-navbar">               
+                <li><a href="index.html" class="listHome">MENU</a></li>
+
+                <li>
+                    <a href="#" class="listHome">RECEITAS</a>
+                    <ul class="dropdown">  
+                        <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">JANTAR <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="#" class="listHome">VIDEOS</a>
+                    <ul class="dropdown">
+                        <li><a href="#">DICAS <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">TUTORIAL <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="#" class="listHome">AJUDA</a>
+                    <ul class="dropdown">
+                        <li><a href="#">FALE CONOSCO <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
             </ul>
         </nav>
     </div>
@@ -48,7 +74,7 @@
             </div>
 
             <div class="bodyCookies">
-                <p>Este site utiliza cookies para ajudá-lo a ter uma experiência de navegação superior e mais relevante no site. <a href="#">Saiba mais...</a></p>
+                <p>Este site utiliza cookies para ajudá-lo a ter uma experiência de navegação superior e mais relevante no site. <a href="https://policies.google.com/terms?hl=pt-BR" target="_blank">Saiba mais...</a></p>
             </div>
 
             <div class="buttonCookies">
@@ -93,7 +119,7 @@
             </div>
         </div>
         <div class="container-02">
-            <p>Site criado por Arthur de Andrade Batista</p>
+            <p>Site criado por <span id="nome"><a href="https://github.com/Batista204" target="_blank">Arthur de Andrade Batista</a></span></p>
         </div>
     </footer>
 
