--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="index.html" class="listHome">MENU</a></li>
 
                 <li>
-                    <a href="#" class="listHome">RECEITAS</a>
+                    <a href="Páginas do site/Página Receitas/index02.html" class="listHome">RECEITAS</a>
                     <ul class="dropdown">  
                         <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
@@ -34,7 +34,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="listHome">VIDEOS</a>
+                    <a href="Páginas do site/Página Vídeos/index03.html" class="listHome">VIDEOS</a>
                     <ul class="dropdown">
                         <li><a href="#">DICAS <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
@@ -43,7 +43,7 @@
                 </li>
 
                 <li>
-                    <a href="#" class="listHome">AJUDA</a>
+                    <a href="Páginas do site/Página Ajuda/index04.html" class="listHome">AJUDA</a>
                     <ul class="dropdown">
                         <li><a href="#">FALE CONOSCO <span class="seta">&#8250;</span></a></li>
                     </ul>
