--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -6,13 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PratoPronto02</title>
     <link rel="shortcut icon" href="Imagens/Favicoon do Trabalho.png" type="image/x-icon">
+    <link rel="stylesheet" href="Estilos/Estilos.css">
 </head>
 <body>
-    <style>
-        body {
-            background-color: blue;
-        }
-    </style>
     
+    <!--  --------------------- Header --------------------- -->
+   
+    <div id="header">
+
+        <div id="logo">
+            <a href="../../index.html"><img src="Imagens/Logo site trabalho.png"></a>
+        </div>
+
+        <nav class="navbar">
+            <ul id="menu-navbar">               
+                <li><a href="../../index.html" class="listHome">MENU</a></li>
+
+                <li>
+                    <a href="Páginas do site/Página Receitas/index02.html" class="listHome">RECEITAS</a>
+                    <ul class="dropdown">  
+                        <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">JANTAR <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="Páginas do site/Página Vídeos/index03.html" class="listHome">VIDEOS</a>
+                    <ul class="dropdown">
+                        <li><a href="#">DICAS <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
+                        <li><a href="#">TUTORIAL <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <a href="Páginas do site/Página Ajuda/index04.html" class="listHome">AJUDA</a>
+                    <ul class="dropdown">
+                        <li><a href="#">FALE CONOSCO <span class="seta">&#8250;</span></a></li>
+                    </ul>
+                </li>
+
+            </ul>
+        </nav>
+    </div>
+
+    <!-- ---------------------- Body ---------------------- -->
+
+    <div id="receitas">
+
+        <div class="banner">
+            <h1>Receitas</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt saepe reiciendis dolor temporibus possimus maiores ist</p>
+        </div>
+
+        <div id="container">
+
+            <h2>OPÇÕES</h2>
+
+            <div class="spaceBox">
+
+                <div class="boxopc">
+                    <a href="#"><h3>CAFÉ DA MANHÃ</h3></a>
+                </div>
+
+                <div class="boxopc">
+                    <a href="#"><h3>ALMOÇO</h3></a>
+                </div>
+
+                <div class="boxopc">
+                    <a href="#"><h3>LANCHE</h3></a>
+                </div>
+
+                <div class="boxopc">
+                    <a href="#"><h3>JANTAR</h3></a>
+                </div>
+            </div>
+
+            <h2>DESTAQUES</h2>
+
+            <div class="spaceBoxDest">
+                <div class="boxDest">
+                    <a href="#"><h3>BOLO</h3></a>
+                </div>
+
+                <div class="boxDest">
+                    <a href="#"><h3>PÃO</h3></a>
+                </div>
+
+                <div class="boxDest">
+                    <a href="#"><h3>TAPIOCA</h3></a>
+                </div>
+            </div>
+
+            <div class="spaceBox">
+                <div class="boxopcDest">
+                    <a href="#"><h3>ROSQUINHA</h3></a>
+                </div>
+
+                <div class="boxopcDest">
+                    <a href="#"><h3>OVO FRITO</h3></a>
+                </div> 
+
+                <div class="boxopcDest">
+                    <a href="#"><h3>FRANGO EMPANADO</h3></a>
+                </div>
+
+                <div class="boxopcDest">
+                    <a href="#"><h3>PÃO DE QUEIJO</h3></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="Scripts.js"></script>
 </body>
 </html>
