--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -35,7 +35,6 @@
                 <li>
                     <a href="Páginas do site/Página Vídeos/index03.html" class="listHome">VIDEOS</a>
                     <ul class="dropdown">
-                        <li><a href="#">DICAS <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">TUTORIAL <span class="seta">&#8250;</span></a></li>
                     </ul>
@@ -117,9 +116,107 @@
                     <a href="#"><h3>PÃO DE QUEIJO</h3></a>
                 </div>
             </div>
+
+            <h2>DICAS</h2>
+
+            <div class="dicas">
+                <div class="pDicas">
+                    <p>Nos da <strong>PratoPronto</strong> separamos para vocês 10 dicas que vão turbinar o seu potêncial na cozinha e fazer com que o processo renda uma comida mais fácil de se preparar e mais gostosa.</p>
+                </div>
+                     <!-- <div class="spaceBox"> -->
+                    <div class="BoxDicas">
+                        <h3>1 - Arroz soltinho e sem complicação</h3>
+                        <p>Para não deixar o arroz embolar, basta adicionar a água sempre quente a evitar mexer. A água fria retarda o processo de cozimento e por isso, faz o arroz ficar mais pastoso do que deveria.</p>
+                    </div>
+                    <div class="BoxDicas">
+                        <h3>2 - Tirar o cheiro ruim da geladeira</h3>
+                        <p>Sabe quando alguma comida estraga na geladeira e parece que o cheiro não vai mais embora mesmo depois de ter descartado o alimento? Reaproveite os sachês de chá usados, eles vão absorver os odores estranhos e oferecer um cheirinho mais neutro para sua geladeira.</p>
+                    </div>
+                    <div class="BoxDicas">
+                        <h3>3 - Deixar o bolo mais fofinho </h3>
+                        <p>Primeiro, utilize todos os ingredientes à temperatura ambiente. Depois, bata as claras separadas dos demais ingredientes até que elas atinjam o ponto de chantilly. Bata todos os ingredientes em um recipiente separado e só acrescente as claras no final, mexendo gentilmente para misturar. </p>
+                    </div>
+                    <div id="ReadMore">
+                        <div class="BoxDicas">
+                            <h3>4 - Afiar facas sem afiador</h3>
+                            <p>Vira os pratos de ponta cabeça e passe a faca repetidas vezes pela borda do prato. Ou, faça uma bolha de papel alumínio e repita o processo. A técnica também funciona com palha de aço e agulha de costura.</p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>5 - Não derramar água no fogão</h3>
+                            <p>Para evitar que a água transborde da panela, atravesse uma colher de pau sobre as bordas. Simples e sem bagunça.</p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>6 - Exagerei no sal e agora? </h3>
+                            <p>Adicione batata ou uma fatia de pão a mistura, esses ingredientes absorvem o sal extra e podem ser retirados antes de servir o preparo, se você achar melhor.</p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>7 - Afiar a lâmina do liquidificador</h3>
+                            <p>Sabe aquela casca de ovo que você costuma jogar fora?  Bate ela no liquidificador, além de afiar as lâminas do eletrodoméstico, o pó da casca de ovo é rico em nutrientes e vai fazer sucesso no seu jardim.</p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>8 - Saber quando o pão já cresceu</h3>
+                            <p>Com as mãos limpas, coloque o dedo no centro da massa fazendo um buraco, se o buraco permanecer aberto por 2 minutos, significa que a massa já cresceu o suficiente.
+                            </p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>9 - Quando faltam ovos no meio da receita</h3>
+                            <p>Não desista nem se desespere, a não ser que estejamos falando de um omelete, você pode substituir cada ovo por meia banana. O resultado e o gosto serão os mesmos.</p>
+                        </div>
+                        <div class="BoxDicas">
+                            <h3>10 - Café igual ao da cafeteria</h3>
+                            <p>Para deixar seu café com o gostinho igual o daquela cafeteria que você gosta, adicione uma pitada de sal e uma colher de chá de canela, o sabor vai mudar completamente.</p>
+                        </div>
+                        <p class="fimDicas">.</p>
+                    </div>
+
+                    <div id="spaceRead">
+                        <div id="buttonRead">
+                            <button>Ver Mais</button>
+                        </div>
+                    </div>
+
+                </div>
+
         </div>
 
     </div>
+
+    <!-- ---------------------Footer-------------------- -->
+
+    <footer id="footer">
+        <div id="cont-img">
+            <img src="Imagens/Logo site trabalho (2 black).png">
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Receitas</h4>
+                    <ul>
+                        <li><a href="#">Café da manhã</a></li>
+                        <li><a href="#">Almoço</a></li>
+                        <li><a href="#">Lanche da tarde</a></li>
+                        <li><a href="#">Jantar</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Videos</h4>
+                    <ul>
+                        <li><a href="#">Truques</a></li>
+                        <li><a href="#">Tutoriais</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Ajuda</h4>
+                    <ul>
+                        <li><a href="#">Fale Conosco</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container-02">
+            <p>Site criado por <span id="nome"><a href="https://github.com/Batista204" target="_blank">Arthur de Andrade Batista</a></span></p>
+        </div>
+    </footer>
 
     <script src="Scripts.js"></script>
 </body>
