--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -86,34 +86,41 @@
             <h2>DESTAQUES</h2>
 
             <div class="spaceBoxDest">
-                <div class="boxDest">
-                    <a href="#"><h3>BOLO</h3></a>
+                <div id="Destaque" class="boxDest">
+                    <!-- <a href="#"><h3>MACARRÃO COM MOLHO VERMELHO</h3></a> -->
+                    <a href="#"><img src="Imagens/espagete.jpg"></a>
                 </div>
 
-                <div class="boxDest">
-                    <a href="#"><h3>PÃO</h3></a>
+                <div id="Destaque" class="boxDest">
+                    <!-- <a href="#"><h3>PÃO FRANCÊS</h3></a> -->
+                    <a href="#"><img src="Imagens/imgPaoFrances.jpg"></a>
                 </div>
 
-                <div class="boxDest">
-                    <a href="#"><h3>TAPIOCA</h3></a>
+                <div id="Destaque" class="boxDest">
+                    <!-- <a href="#"><h3>OVO MEXIDO</h3></a> -->
+                    <a href="#"><img src="Imagens/Ovo-Mexido-02-1920x1442.jpg"></a>
                 </div>
             </div>
 
             <div class="spaceBox">
-                <div class="boxopcDest">
-                    <a href="#"><h3>ROSQUINHA</h3></a>
+                <div id="Destaque" class="boxopcDest">
+                    <!-- <a href="#"><h3>TAPIOCA</h3></a> -->
+                    <a href="#"><img src="Imagens/download-tapioca.jpg"></a>
                 </div>
 
-                <div class="boxopcDest">
-                    <a href="#"><h3>OVO FRITO</h3></a>
+                <div id="Destaque" class="boxopcDest">
+                    <!-- <a href="#"><h3>PANQUECA</h3></a> -->
+                    <a href="#"><img src="Imagens/panqueca650.jpg"></a>
                 </div> 
 
-                <div class="boxopcDest">
-                    <a href="#"><h3>FRANGO EMPANADO</h3></a>
+                <div id="Destaque" class="boxopcDest">
+                    <!-- <a href="#"><h3>SANDUICHE DE ATUM</h3></a> -->
+                    <a href="#"><img src="Imagens/sanduiche-natural-de-atum.jpg"></a>
                 </div>
 
-                <div class="boxopcDest">
-                    <a href="#"><h3>PÃO DE QUEIJO</h3></a>
+                <div id="Destaque" class="boxopcDest">
+                    <!-- <a href="#"><h3>PÃO DE QUEIJO</h3></a> -->
+                    <a href="#"><img src="Imagens/yt-069_pao-de-queijo_receita.jpg"></a>
                 </div>
             </div>
 
@@ -166,7 +173,6 @@
                             <h3>10 - Café igual ao da cafeteria</h3>
                             <p>Para deixar seu café com o gostinho igual o daquela cafeteria que você gosta, adicione uma pitada de sal e uma colher de chá de canela, o sabor vai mudar completamente.</p>
                         </div>
-                        <p class="fimDicas">.</p>
                     </div>
 
                     <div id="spaceRead">
