--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -86,41 +86,74 @@
             <h2>DESTAQUES</h2>
 
             <div class="spaceBoxDest">
-                <div id="Destaque" class="boxDest">
-                    <!-- <a href="#"><h3>MACARRÃO COM MOLHO VERMELHO</h3></a> -->
-                    <a href="#"><img src="Imagens/espagete.jpg"></a>
+
+                <div id="DestaqueMaior">
+                    <div class="imgDestMaior">
+                        <img src="Imagens/espagete.jpg">
+                    </div>
+
+                    <div class="nomeDest">
+                        <h3>MACARRÃO</h3>
+                    </div>
+                </div>
+                
+
+                <div id="DestaqueMaior">
+                    <div class="imgDestMaior">
+                        <img src="Imagens/imgPaoFrances.jpg">
+                    </div>
+
+                    <div class="nomeDest">
+                        <h3>PÃO FRANCÊS</h3>
+                    </div>
                 </div>
 
-                <div id="Destaque" class="boxDest">
-                    <!-- <a href="#"><h3>PÃO FRANCÊS</h3></a> -->
-                    <a href="#"><img src="Imagens/imgPaoFrances.jpg"></a>
-                </div>
+                <div id="DestaqueMaior">
+                    <div class="imgDestMaior">
+                        <img src="Imagens/Ovo-Mexido-02-1920x1442.jpg">
+                    </div>
 
-                <div id="Destaque" class="boxDest">
-                    <!-- <a href="#"><h3>OVO MEXIDO</h3></a> -->
-                    <a href="#"><img src="Imagens/Ovo-Mexido-02-1920x1442.jpg"></a>
+                    <div class="nomeDest">
+                        <h3>OVO MEXIDO</h3>
+                    </div>
                 </div>
             </div>
 
             <div class="spaceBox">
-                <div id="Destaque" class="boxopcDest">
-                    <!-- <a href="#"><h3>TAPIOCA</h3></a> -->
-                    <a href="#"><img src="Imagens/download-tapioca.jpg"></a>
+                <div id="DestMenor">
+                    <div class="imgDestMenor">
+                        <img src="Imagens/download-tapioca.jpg">
+                    </div>
+                    <div class="nomeDest">
+                        <h3>TAPIOCA</h3>
+                    </div>
                 </div>
 
-                <div id="Destaque" class="boxopcDest">
-                    <!-- <a href="#"><h3>PANQUECA</h3></a> -->
-                    <a href="#"><img src="Imagens/panqueca650.jpg"></a>
-                </div> 
-
-                <div id="Destaque" class="boxopcDest">
-                    <!-- <a href="#"><h3>SANDUICHE DE ATUM</h3></a> -->
-                    <a href="#"><img src="Imagens/sanduiche-natural-de-atum.jpg"></a>
+                <div id="DestMenor">
+                    <div class="imgDestMenor">
+                        <img src="Imagens/panqueca650.jpg">
+                    </div>
+                    <div class="nomeDest">
+                        <h3>PANQUECA</h3>
+                    </div>
                 </div>
 
-                <div id="Destaque" class="boxopcDest">
-                    <!-- <a href="#"><h3>PÃO DE QUEIJO</h3></a> -->
-                    <a href="#"><img src="Imagens/yt-069_pao-de-queijo_receita.jpg"></a>
+                <div id="DestMenor">
+                    <div class="imgDestMenor">
+                        <img src="Imagens/sanduiche-natural-de-atum.jpg">
+                    </div>
+                    <div class="nomeDest">
+                        <h3>SANDUICHE DE ATUM</h3>
+                    </div>
+                </div>
+
+                <div id="DestMenor">
+                    <div class="imgDestMenor">
+                        <img src="Imagens/yt-069_pao-de-queijo_receita.jpg">
+                    </div>
+                    <div class="nomeDest">
+                        <h3>PÃO DE QUEIJO</h3>
+                    </div>
                 </div>
             </div>
 
