--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PratoPronto02</title>
+    <title>PratoPronto</title>
     <link rel="shortcut icon" href="Imagens/Favicoon do Trabalho.png" type="image/x-icon">
     <link rel="stylesheet" href="Estilos/Estilos.css">
 </head>
@@ -57,7 +57,6 @@
 
         <div class="banner">
             <h1>Receitas</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nesciunt saepe reiciendis dolor temporibus possimus maiores ist</p>
         </div>
 
         <div id="container">
@@ -89,70 +88,50 @@
 
                 <div id="DestaqueMaior">
                     <div class="imgDestMaior">
-                        <img src="Imagens/espagete.jpg">
+                        <a href="#"><img src="Imagens/espagete.jpg"></a>
                     </div>
 
                     <div class="nomeDest">
-                        <h3>MACARRÃO</h3>
-                    </div>
-                </div>
-                
-
-                <div id="DestaqueMaior">
-                    <div class="imgDestMaior">
-                        <img src="Imagens/imgPaoFrances.jpg">
-                    </div>
-
-                    <div class="nomeDest">
-                        <h3>PÃO FRANCÊS</h3>
+                        <h3><a href="#">MACARRÃO</a></h3>
                     </div>
                 </div>
 
                 <div id="DestaqueMaior">
                     <div class="imgDestMaior">
-                        <img src="Imagens/Ovo-Mexido-02-1920x1442.jpg">
+                        <a href="#"><img src="Imagens/yt-069_pao-de-queijo_receita.jpg"></a>
                     </div>
 
                     <div class="nomeDest">
-                        <h3>OVO MEXIDO</h3>
+                        <h3><a href="#">PÃO DE QUEIJO</a></h3>
                     </div>
                 </div>
             </div>
 
-            <div class="spaceBox">
+            <div class="spaceBoxMenor">
                 <div id="DestMenor">
                     <div class="imgDestMenor">
-                        <img src="Imagens/download-tapioca.jpg">
+                        <a href="#"><img src="Imagens/download-tapioca.jpg"></a>
                     </div>
                     <div class="nomeDest">
-                        <h3>TAPIOCA</h3>
+                        <h3><a href="#">TAPIOCA</a></h3>
                     </div>
                 </div>
 
                 <div id="DestMenor">
                     <div class="imgDestMenor">
-                        <img src="Imagens/panqueca650.jpg">
+                        <a href="#"><img src="Imagens/panqueca650.jpg"></a>
                     </div>
                     <div class="nomeDest">
-                        <h3>PANQUECA</h3>
+                        <h3><a href="#">PANQUECA</a></h3>
                     </div>
                 </div>
 
                 <div id="DestMenor">
                     <div class="imgDestMenor">
-                        <img src="Imagens/sanduiche-natural-de-atum.jpg">
+                        <a href="#"><img src="Imagens/sanduiche-natural-de-atum.jpg"></a>
                     </div>
                     <div class="nomeDest">
-                        <h3>SANDUICHE DE ATUM</h3>
-                    </div>
-                </div>
-
-                <div id="DestMenor">
-                    <div class="imgDestMenor">
-                        <img src="Imagens/yt-069_pao-de-queijo_receita.jpg">
-                    </div>
-                    <div class="nomeDest">
-                        <h3>PÃO DE QUEIJO</h3>
+                        <h3><a href="#">SANDUICHE DE ATUM</a></h3>
                     </div>
                 </div>
             </div>
