--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PratoFeito</title>
+    <title>PratoPronto</title>
     <link rel="stylesheet" href="Estilos/Css.css">
     <link rel="shortcut icon" href="Imagens/Favicoon do Trabalho.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/9cea758d5a.js" crossorigin="anonymous"></script>
