--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -28,7 +28,7 @@
                         <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
                         <li><a href="#">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">JANTAR <span class="seta">&#8250;</span></a></li>
+                        <li><a href="REFEIÇÕES/Jantar/index.html">JANTAR <span class="seta">&#8250;</span></a></li>
                     </ul>
                 </li>
 
@@ -53,7 +53,7 @@
 
     <!-- ---------------------- Body ---------------------- -->
 
-    <div id="receitas">
+    <main>
 
         <div class="banner">
             <h1>Receitas</h1>
@@ -197,7 +197,7 @@
 
         </div>
 
-    </div>
+    </main>
 
     <!-- ---------------------Footer-------------------- -->
 
@@ -213,7 +213,7 @@
                         <li><a href="#">Café da manhã</a></li>
                         <li><a href="#">Almoço</a></li>
                         <li><a href="#">Lanche da tarde</a></li>
-                        <li><a href="#">Jantar</a></li>
+                        <li><a href="REFEIÇÕES/Almoço/index.html">Jantar</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -236,6 +236,6 @@
         </div>
     </footer>
 
-    <script src="Scripts.js"></script>
+    <script src="./Scripts/Scripts.js"></script>
 </body>
 </html>
