Update das refeições

--- a/Páginas do site/Página Receitas/index02.html
+++ b/Páginas do site/Página Receitas/index02.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <link rel="shortcut icon" href="Imagens/Favicoon do Trabalho.png" type="image/x-icon">
     <link rel="stylesheet" href="Estilos/Estilos.css">
 </head>
+
 <body>
-    
+
     <!--  --------------------- Header --------------------- -->
-   
+
     <div id="header">
 
         <div id="logo">
@@ -19,27 +21,20 @@
         </div>
 
         <nav class="navbar">
-            <ul id="menu-navbar">               
+            <ul id="menu-navbar">
                 <li><a href="../../index.html" class="listHome">MENU</a></li>
 
                 <li>
                     <a href="Páginas do site/Página Receitas/index02.html" class="listHome">RECEITAS</a>
-                    <ul class="dropdown">  
-                        <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
+                    <ul class="dropdown">
+                        <li><a href="REFEIÇÕES/Café da manhã/index.html">CAFÉ DA MANHÃ <span
+                                    class="seta">&#8250;</span></a></li>
+                        <li><a href="REFEIÇÕES/Almoço/index.html">ALMOÇO <span class="seta">&#8250;</span></a></li>
+                        <li><a href="REFEIÇÕES/Lanche/index.html">LANCHE DA TARDE <span class="seta">&#8250;</span></a>
+                        </li>
                         <li><a href="REFEIÇÕES/Jantar/index.html">JANTAR <span class="seta">&#8250;</span></a></li>
                     </ul>
                 </li>
-
-                <li>
-                    <a href="Páginas do site/Página Vídeos/index03.html" class="listHome">VIDEOS</a>
-                    <ul class="dropdown">
-                        <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">TUTORIAL <span class="seta">&#8250;</span></a></li>
-                    </ul>
-                </li>
-
                 <li>
                     <a href="Páginas do site/Página Ajuda/index04.html" class="listHome">AJUDA</a>
                     <ul class="dropdown">
@@ -66,22 +61,32 @@
             <div class="spaceBox">
 
                 <div class="boxopc">
-                    <a href="#"><h3>CAFÉ DA MANHÃ</h3></a>
+                    <a href="REFEIÇÕES/Café da manhã/index.html">
+                        <h3>CAFÉ DA MANHÃ</h3>
+                    </a>
                 </div>
 
                 <div class="boxopc">
-                    <a href="#"><h3>ALMOÇO</h3></a>
+                    <a href="REFEIÇÕES/Almoço/index.html">
+                        <h3>ALMOÇO</h3>
+                    </a>
                 </div>
 
                 <div class="boxopc">
-                    <a href="#"><h3>LANCHE</h3></a>
+                    <a href="REFEIÇÕES/Lanche/index.html">
+                        <h3>LANCHE</h3>
+                    </a>
                 </div>
 
                 <div class="boxopc">
-                    <a href="#"><h3>JANTAR</h3></a>
+                    <a href="REFEIÇÕES/Jantar/index.html">
+                        <h3>JANTAR</h3>
+                    </a>
                 </div>
             </div>
-
+        </div> 
+        
+        <div id="container">
             <h2>DESTAQUES</h2>
 
             <div class="spaceBoxDest">
@@ -110,10 +115,10 @@
             <div class="spaceBoxMenor">
                 <div id="DestMenor">
                     <div class="imgDestMenor">
-                        <a href="#"><img src="Imagens/download-tapioca.jpg"></a>
+                        <a href="#"><img src="Imagens/Tapioca_com_carne_seca.jpg"></a>
                     </div>
                     <div class="nomeDest">
-                        <h3><a href="#">TAPIOCA</a></h3>
+                        <h3><a href="#">TAPIOCA de carne seca</a></h3>
                     </div>
                 </div>
 
@@ -135,68 +140,85 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div id="container">
             <h2>DICAS</h2>
 
             <div class="dicas">
                 <div class="pDicas">
-                    <p>Nos da <strong>PratoPronto</strong> separamos para vocês 10 dicas que vão turbinar o seu potêncial na cozinha e fazer com que o processo renda uma comida mais fácil de se preparar e mais gostosa.</p>
+                    <p>Nos da <strong>PratoPronto</strong> separamos para vocês 10 dicas que vão turbinar o seu
+                        potêncial na cozinha e fazer com que o processo renda uma comida mais fácil de se preparar e
+                        mais gostosa.</p>
                 </div>
-                     <!-- <div class="spaceBox"> -->
+                <!-- <div class="spaceBox"> -->
+                <div class="BoxDicas">
+                    <h3>1 - Arroz soltinho e sem complicação</h3>
+                    <p>Para não deixar o arroz embolar, basta adicionar a água sempre quente a evitar mexer. A água fria
+                        retarda o processo de cozimento e por isso, faz o arroz ficar mais pastoso do que deveria.</p>
+                </div>
+                <div class="BoxDicas">
+                    <h3>2 - Tirar o cheiro ruim da geladeira</h3>
+                    <p>Sabe quando alguma comida estraga na geladeira e parece que o cheiro não vai mais embora mesmo
+                        depois de ter descartado o alimento? Reaproveite os sachês de chá usados, eles vão absorver os
+                        odores estranhos e oferecer um cheirinho mais neutro para sua geladeira.</p>
+                </div>
+                <div class="BoxDicas">
+                    <h3>3 - Deixar o bolo mais fofinho </h3>
+                    <p>Primeiro, utilize todos os ingredientes à temperatura ambiente. Depois, bata as claras separadas
+                        dos demais ingredientes até que elas atinjam o ponto de chantilly. Bata todos os ingredientes em
+                        um recipiente separado e só acrescente as claras no final, mexendo gentilmente para misturar.
+                    </p>
+                </div>
+                <div id="ReadMore">
                     <div class="BoxDicas">
-                        <h3>1 - Arroz soltinho e sem complicação</h3>
-                        <p>Para não deixar o arroz embolar, basta adicionar a água sempre quente a evitar mexer. A água fria retarda o processo de cozimento e por isso, faz o arroz ficar mais pastoso do que deveria.</p>
+                        <h3>4 - Afiar facas sem afiador</h3>
+                        <p>Vira os pratos de ponta cabeça e passe a faca repetidas vezes pela borda do prato. Ou, faça
+                            uma bolha de papel alumínio e repita o processo. A técnica também funciona com palha de aço
+                            e agulha de costura.</p>
                     </div>
                     <div class="BoxDicas">
-                        <h3>2 - Tirar o cheiro ruim da geladeira</h3>
-                        <p>Sabe quando alguma comida estraga na geladeira e parece que o cheiro não vai mais embora mesmo depois de ter descartado o alimento? Reaproveite os sachês de chá usados, eles vão absorver os odores estranhos e oferecer um cheirinho mais neutro para sua geladeira.</p>
+                        <h3>5 - Não derramar água no fogão</h3>
+                        <p>Para evitar que a água transborde da panela, atravesse uma colher de pau sobre as bordas.
+                            Simples e sem bagunça.</p>
                     </div>
                     <div class="BoxDicas">
-                        <h3>3 - Deixar o bolo mais fofinho </h3>
-                        <p>Primeiro, utilize todos os ingredientes à temperatura ambiente. Depois, bata as claras separadas dos demais ingredientes até que elas atinjam o ponto de chantilly. Bata todos os ingredientes em um recipiente separado e só acrescente as claras no final, mexendo gentilmente para misturar. </p>
+                        <h3>6 - Exagerei no sal e agora? </h3>
+                        <p>Adicione batata ou uma fatia de pão a mistura, esses ingredientes absorvem o sal extra e
+                            podem ser retirados antes de servir o preparo, se você achar melhor.</p>
                     </div>
-                    <div id="ReadMore">
-                        <div class="BoxDicas">
-                            <h3>4 - Afiar facas sem afiador</h3>
-                            <p>Vira os pratos de ponta cabeça e passe a faca repetidas vezes pela borda do prato. Ou, faça uma bolha de papel alumínio e repita o processo. A técnica também funciona com palha de aço e agulha de costura.</p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>5 - Não derramar água no fogão</h3>
-                            <p>Para evitar que a água transborde da panela, atravesse uma colher de pau sobre as bordas. Simples e sem bagunça.</p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>6 - Exagerei no sal e agora? </h3>
-                            <p>Adicione batata ou uma fatia de pão a mistura, esses ingredientes absorvem o sal extra e podem ser retirados antes de servir o preparo, se você achar melhor.</p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>7 - Afiar a lâmina do liquidificador</h3>
-                            <p>Sabe aquela casca de ovo que você costuma jogar fora?  Bate ela no liquidificador, além de afiar as lâminas do eletrodoméstico, o pó da casca de ovo é rico em nutrientes e vai fazer sucesso no seu jardim.</p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>8 - Saber quando o pão já cresceu</h3>
-                            <p>Com as mãos limpas, coloque o dedo no centro da massa fazendo um buraco, se o buraco permanecer aberto por 2 minutos, significa que a massa já cresceu o suficiente.
-                            </p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>9 - Quando faltam ovos no meio da receita</h3>
-                            <p>Não desista nem se desespere, a não ser que estejamos falando de um omelete, você pode substituir cada ovo por meia banana. O resultado e o gosto serão os mesmos.</p>
-                        </div>
-                        <div class="BoxDicas">
-                            <h3>10 - Café igual ao da cafeteria</h3>
-                            <p>Para deixar seu café com o gostinho igual o daquela cafeteria que você gosta, adicione uma pitada de sal e uma colher de chá de canela, o sabor vai mudar completamente.</p>
-                        </div>
+                    <div class="BoxDicas">
+                        <h3>7 - Afiar a lâmina do liquidificador</h3>
+                        <p>Sabe aquela casca de ovo que você costuma jogar fora? Bate ela no liquidificador, além de
+                            afiar as lâminas do eletrodoméstico, o pó da casca de ovo é rico em nutrientes e vai fazer
+                            sucesso no seu jardim.</p>
                     </div>
-
-                    <div id="spaceRead">
-                        <div id="buttonRead">
-                            <button>Ver Mais</button>
-                        </div>
+                    <div class="BoxDicas">
+                        <h3>8 - Saber quando o pão já cresceu</h3>
+                        <p>Com as mãos limpas, coloque o dedo no centro da massa fazendo um buraco, se o buraco
+                            permanecer aberto por 2 minutos, significa que a massa já cresceu o suficiente.
+                        </p>
                     </div>
-
+                    <div class="BoxDicas">
+                        <h3>9 - Quando faltam ovos no meio da receita</h3>
+                        <p>Não desista nem se desespere, a não ser que estejamos falando de um omelete, você pode
+                            substituir cada ovo por meia banana. O resultado e o gosto serão os mesmos.</p>
+                    </div>
+                    <div class="BoxDicas">
+                        <h3>10 - Café igual ao da cafeteria</h3>
+                        <p>Para deixar seu café com o gostinho igual o daquela cafeteria que você gosta, adicione uma
+                            pitada de sal e uma colher de chá de canela, o sabor vai mudar completamente.</p>
+                    </div>
                 </div>
 
+                <div id="spaceRead">
+                    <div id="buttonRead">
+                        <button>Ver Mais</button>
+                    </div>
+                </div>
+
+            </div>
         </div>
-
     </main>
 
     <!-- ---------------------Footer-------------------- -->
@@ -208,19 +230,18 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>Receitas</h4>
+                    <h4>Home</h4>
                     <ul>
-                        <li><a href="#">Café da manhã</a></li>
-                        <li><a href="#">Almoço</a></li>
-                        <li><a href="#">Lanche da tarde</a></li>
-                        <li><a href="REFEIÇÕES/Almoço/index.html">Jantar</a></li>
+                        <li><a href="#">Home</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Videos</h4>
+                    <h4>Receitas</h4>
                     <ul>
-                        <li><a href="#">Truques</a></li>
-                        <li><a href="#">Tutoriais</a></li>
+                        <li><a href="REFEIÇÕES/Café da manhã/index.html">Café da manhã</a></li>
+                        <li><a href="REFEIÇÕES/Almoço/index.html">Almoço</a></li>
+                        <li><a href="REFEIÇÕES/Lanche/index.html">Lanche da tarde</a></li>
+                        <li><a href="REFEIÇÕES/Almoço/index.html">Jantar</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -232,10 +253,12 @@
             </div>
         </div>
         <div class="container-02">
-            <p>Site criado por <span id="nome"><a href="https://github.com/Batista204" target="_blank">Arthur de Andrade Batista</a></span></p>
+            <p>Site criado por <span id="nome"><a href="https://github.com/Batista204" target="_blank">Arthur de Andrade
+                        Batista</a></span></p>
         </div>
     </footer>
 
     <script src="./Scripts/Scripts.js"></script>
 </body>
+
 </html>
