--- a/index.html
+++ b/index.html
@@ -26,21 +26,12 @@
                 <li>
                     <a href="Páginas do site/Página Receitas/index02.html" class="listHome">RECEITAS</a>
                     <ul class="dropdown">  
-                        <li><a href="#">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">ALMOÇO <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">JANTAR <span class="seta">&#8250;</span></a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Café da manhã/index.html">CAFÉ DA MANHÃ <span class="seta">&#8250;</span></a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Almoço/index.html">ALMOÇO <span class="seta">&#8250;</span></a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Lanche/index.html">LANCHE DA TARDE <span class="seta">&#8250;</span></a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Jantar/index.html">JANTAR <span class="seta">&#8250;</span></a></li>
                     </ul>
                 </li>
-
-                <li>
-                    <a href="Páginas do site/Página Vídeos/index03.html" class="listHome">VIDEOS</a>
-                    <ul class="dropdown">
-                        <li><a href="#">TRUQUES <span class="seta">&#8250;</span></a></li>
-                        <li><a href="#">TUTORIAL <span class="seta">&#8250;</span></a></li>
-                    </ul>
-                </li>
-
                 <li>
                     <a href="Páginas do site/Página Ajuda/index04.html" class="listHome">AJUDA</a>
                     <ul class="dropdown">
@@ -93,19 +84,18 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>Receitas</h4>
+                    <h4>Home</h4>
                     <ul>
-                        <li><a href="#">Café da manhã</a></li>
-                        <li><a href="#">Almoço</a></li>
-                        <li><a href="#">Lanche da tarde</a></li>
-                        <li><a href="#">Jantar</a></li>
+                        <li><a href="index.html">Home</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Videos</h4>
+                    <h4>Receitas</h4>
                     <ul>
-                        <li><a href="#">Truques</a></li>
-                        <li><a href="#">Tutoriais</a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Café da manhã/index.html">Café da manhã</a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Almoço/index.html">Almoço</a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Lanche/index.html">Lanche da tarde</a></li>
+                        <li><a href="Páginas do site/Página Receitas/REFEIÇÕES/Jantar/index.html">Jantar</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
